force-app/main/default/objects/Test_Run__c/Test_Run__c.object-meta.xml
<CustomObject>
    <description>Tracks each Playwright E2E test run triggered from Salesforce. One record per execution.</description>
    <label>Test Run</label>
    <nameField>
        <displayFormat>TR-{0000}</displayFormat>
        <label>Test Run Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Test Runs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>