force-app/main/default/objects/Test_Run__c/fields/Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_Name__c</fullName>
    <description>Name of the target Account, captured at run time from the dashboard account search. This string is passed to the Playwright specs (QTC_ACCOUNT_NAME / QTC_ACCOUNT_SEARCH / QTC_ACCOUNT_FULL_NAME) instead of the hard-coded fallback.</description>
    <label>Account Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>