force-app/main/default/objects/Test_Run__c/fields/Agent_Id__c.field-meta.xml
<CustomField>
    <fullName>Agent_Id__c</fullName>
    <label>Agent ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>