force-app/main/default/objects/Test_Run__c/fields/Agent_Last_Heartbeat__c.field-meta.xml
<CustomField>
    <fullName>Agent_Last_Heartbeat__c</fullName>
    <label>Agent Last Heartbeat</label>
    <type>DateTime</type>
</CustomField>