force-app/main/default/objects/Test_Run__c/fields/Contract__c.field-meta.xml
<CustomField>
    <fullName>Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contract</label>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>Test Runs</relationshipLabel>
    <relationshipName>Test_Runs_Contract</relationshipName>
    <type>Lookup</type>
</CustomField>