force-app/main/default/objects/Test_Run__c/fields/Log_Output__c.field-meta.xml
<CustomField>
    <fullName>Log_Output__c</fullName>
    <label>Log Output</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>