force-app/main/default/objects/Test_Run__c/fields/Multiple_Accounts__c.field-meta.xml
<CustomField>
    <fullName>Multiple_Accounts__c</fullName>
    <description>JSON array of accounts for multi-account test runs. Format: [{&quot;id&quot;:&quot;001...&quot;,&quot;search&quot;:&quot;Bates White&quot;,&quot;fullName&quot;:&quot;Bates White&quot;},...]. Passed to Playwright as QTC_ACCOUNTS env var. Set only when the run uses the multi-account mode toggle (min 2, max 5 accounts).</description>
    <label>Multiple Accounts</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>