force-app/main/default/objects/Test_Run__c/fields/Requested_By__c.field-meta.xml
<CustomField>
    <fullName>Requested_By__c</fullName>
    <label>Requested By</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Test Runs</relationshipLabel>
    <relationshipName>Test_Runs</relationshipName>
    <type>Lookup</type>
</CustomField>