force-app/main/default/objects/Test_Run__c/fields/Rich_Results__c.field-meta.xml
<CustomField>
    <fullName>Rich_Results__c</fullName>
    <label>Rich Results JSON</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>