force-app/main/default/objects/Test_Run__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>PENDING</fullName><default>true</default><label>PENDING</label></value>
            <value><fullName>CLAIMED</fullName><default>false</default><label>CLAIMED</label></value>
            <value><fullName>RUNNING</fullName><default>false</default><label>RUNNING</label></value>
            <value><fullName>PASSED</fullName><default>false</default><label>PASSED</label></value>
            <value><fullName>FAILED</fullName><default>false</default><label>FAILED</label></value>
            <value><fullName>ERROR</fullName><default>false</default><label>ERROR</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>