force-app/main/default/objects/Test_Run__c/fields/Test_Suite__c.field-meta.xml
<CustomField>
    <fullName>Test_Suite__c</fullName>
    <label>Test Suite</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>