force-app/main/default/objects/Test_Run__c/fields/Tests_Failed__c.field-meta.xml
<CustomField>
    <fullName>Tests_Failed__c</fullName>
    <label>Tests Failed</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>